--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "gatsby": "^3.3.1",
     "gatsby-plugin-emotion": "^6.3.0",
     "gatsby-plugin-google-analytics": "^3.4.0",
+    "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-image": "^1.3.1",
     "gatsby-plugin-manifest": "^3.3.0",
     "gatsby-plugin-react-helmet": "^4.3.0",
